--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
   {% include head.html %}
   <body prefix="dc: http://purl.org/dc/terms/ og: http://ogp.me/ns#">
     {% include navbar.html %}
-    <div class="container">
+    <div class="container-fluid">
       <div class="col-md-offset-1">
 
         {{ content }}
