--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
   <body prefix="dc: http://purl.org/dc/terms/ og: http://ogp.me/ns#">
     {% include navbar.html %}
     <div class="container-fluid">
-      <div class="col-md-offset-1">
+    <!--  <div class="col-md-offset-1"> -->
 
         {{ content }}
 
