--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -13,7 +13,7 @@
 
     <div class="collapse navbar-collapse" id="navbar-collapse-1">
       <ul class="nav nav-tabs">
-        <li><a href="/about.html">About</a></li>
+        <li><a href="http://mrizzoli.github.io">About</a></li>
 
         <div class="navbar-right">
           <li><a href="https://github.com/mrizzoli/notes_src">Source on Github</a>&nbsp;<i class="mega-octicon octicon-mark-github"></i>
