--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
               GitHub Profile</a></p>
           <p class="view"><a href="http://rizzoli.me.uk">
               Notebook</a></p>
-          <p class="view"><a href="http://mrizzoli.github.io/tesi_jekyll">
+          <p class="view"><a href="http://rizzoli.me.uk/tesi.html">
               MA Thesis</a></p>
       </div>
 
