--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,9 +11,9 @@
           <p>personal page</p>
           <p class="view"><a href="https://github.com/mrizzoli">
               GitHub Profile</a></p>
-          <p class="view"><a href="http://rizzoli.me.uk">
+          <p class="view"><a href="http://notebook.rizzoli.me.uk">
               Notebook</a></p>
-          <p class="view"><a href="http://rizzoli.me.uk/tesi.html">
+          <p class="view"><a href="http://notebook.rizzoli.me.uk/tesi.html">
               MA Thesis</a></p>
       </div>
 
