--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,27 +1,14 @@
-<nav class="navbar navbar-default" role="navigation">
+<nav class="navbar navbar-fixed-top navbar-center">
   <div class="container-fluid">
-
-    <div class="navbar-header">
-       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-1">
-         <span class="sr-only">Toggle navigation</span>
-         <span class="icon-bar"></span>
-         <span class="icon-bar"></span>
-         <span class="icon-bar"></span>
-       </button>
-      <a class="navbar-brand" href="/">rizzoli.me.uk</a>
-    </div> 
-
-    <div class="collapse navbar-collapse" id="navbar-collapse-1">
-      <ul class="nav nav-tabs">
-        <li><a href="http://mrizzoli.github.io">About</a></li>
-
-        <div class="navbar-right">
-          <li><a href="https://github.com/mrizzoli/notes_src">Source on Github</a>&nbsp;<i class="mega-octicon octicon-mark-github"></i>
-        </div>
-
-      </ul>
-    </div> 
-
+    <div class="col-md-3">
+      <h3><a class="fa fa-github-square fa-3x" href="#fbsection1"></a></h3></div>
+    <div class="col-md-3">
+      <h3><a class="fa fa-camera-retro fa-3x"  href="#fbsection2" class="cbp-fbcurrent"></a></div></h3>
+    <div class="col-md-3">
+      <h3><a class="fa fa-archive fa-3x"href="#fbsection3"></a></div></h3>
+    <div class="col-md-3">
+      <h3><a class="fa fa-share-square-o fa-3x" href="#fbsection4"></a></div></h3>
   </div>
-</nav>
+</nav>  
+  
 
