--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,16 +6,16 @@
     <div class="container-fluid">
       <!--  <div class="col-md-offset-1"> -->
       <div class="row">
-      <div class="col-md-3">
-          <h1>notes & stuff</h1>
-          <p>personal page</p>
-          <p class="view"><a href="https://github.com/mrizzoli">
-              GitHub Profile</a></p>
-          <p class="view"><a href="http://notebook.rizzoli.me.uk">
-              Notebook</a></p>
-          <p class="view"><a href="http://notebook.rizzoli.me.uk/tesi.html">
-              MA Thesis</a></p>
-      </div>
+      <!-- <div class="col-md-3"> -->
+      <!--     <h1>notes & stuff</h1> -->
+      <!--     <p>personal page</p> -->
+      <!--     <p class="view"><a href="https://github.com/mrizzoli"> -->
+      <!--         GitHub Profile</a></p> -->
+      <!--     <p class="view"><a href="http://notebook.rizzoli.me.uk"> -->
+      <!--         Notebook</a></p> -->
+      <!--     <p class="view"><a href="http://notebook.rizzoli.me.uk/tesi.html"> -->
+      <!--         MA Thesis</a></p> -->
+      <!-- </div> -->
 
         {{ content }}
 
