--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,7 @@
 <link href="/assets/css/octicons.css" rel="stylesheet" />    
 <link href="/assets/css/sticky_footer.css" rel="stylesheet" type="text/css">
 <link href="/assets/css/print.css" rel="stylesheet" type="text/css" media="print">
+<link href="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
 
 
