--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,13 +1,20 @@
 <nav class="navbar navbar-fixed-top navbar-center">
   <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="/">rizzoli.me.uk</a>
+    </div> 
     <div class="col-md-3">
-      <h3><a class="fa fa-github-square fa-3x" href="#fbsection1"></a></h3></div>
+      <h3><a class="fa fa-github-square fa-3x" href="#fbsection1"></a></h3>
+    </div>
     <div class="col-md-3">
-      <h3><a class="fa fa-camera-retro fa-3x"  href="#fbsection2" class="cbp-fbcurrent"></a></div></h3>
+      <h3><a class="fa fa-camera-retro fa-3x" href="#fbsection2"></a></h3>
+    </div>
     <div class="col-md-3">
-      <h3><a class="fa fa-archive fa-3x" href="#fbsection3"></a></div></h3>
+      <h3><a class="fa fa-archive fa-3x" href="#fbsection3"></a></h3>
+    </div>
     <div class="col-md-3">
-      <h3><a class="fa fa-share-square-o fa-3x" href="#fbsection4"></a></div></h3>
+      <h3><a class="fa fa-share-square-o fa-3x" href="#fbsection4"></a></h3>
+    </div>
   </div>
 </nav>  
   
