--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -12,14 +12,14 @@
     <!-- </div>  -->
 
     <!-- <div class="collapse navbar-collapse" id="navbar-collapse-1"> -->
-    <!--   <ul class="nav nav-tabs"> -->
+      <ul class="nav nav-tabs">
         <li><a href="http://mrizzoli.github.io">About</a></li>
 
         <!-- <div class="navbar-right"> -->
           <li><a href="https://github.com/mrizzoli/notes_src">Source on Github</a>&nbsp;<i class="mega-octicon octicon-mark-github"></i>
     <!--     </div> -->
 
-    <!--   </ul> -->
+      </ul>
     <!-- </div>  -->
 
   </div>
