--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -2,26 +2,26 @@
   <div class="container-fluid">
 
     <div class="navbar-header">
-       <!-- <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-1"> -->
-       <!--   <span class="sr-only">Toggle navigation</span> -->
-       <!--   <span class="icon-bar"></span> -->
-       <!--   <span class="icon-bar"></span> -->
-       <!--   <span class="icon-bar"></span> -->
-       <!-- </button> -->
+      <!-- <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-1"> -->
+      <!--   <span class="sr-only">Toggle navigation</span> -->
+      <!--   <span class="icon-bar"></span> -->
+      <!--   <span class="icon-bar"></span> -->
+      <!--   <span class="icon-bar"></span> -->
+      <!-- </button> -->
       <a class="navbar-brand" href="/">rizzoli.me.uk</a>
-    <!-- </div>  -->
+    </div>
 
-    <!-- <div class="collapse navbar-collapse" id="navbar-collapse-1"> -->
+    <div class="collapse navbar-collapse" id="navbar-collapse-1">
       <ul class="nav nav-tabs">
         <li><a href="http://mrizzoli.github.io">About</a></li>
-
-        <!-- <div class="navbar-right"> -->
-          <li><a href="https://github.com/mrizzoli/notes_src">Source on Github</a>&nbsp;<i class="mega-octicon octicon-mark-github"></i>
-    <!--     </div> -->
-
+        <li><a href="https://github.com/mrizzoli/notes_src">Source on
+            Github</a>&nbsp;<i class="mega-octicon octicon-mark-github"></i>
+        <li><p>personal page</p></li>
+        <li><p class="view"><a href="https://github.com/mrizzoli">GitHub Profile</a></p></li>
+        <li><p class="view"><a href="http://notebook.rizzoli.me.uk">Notebook</a></p></li>
+        <li><p class="view"><a href="http://notebook.rizzoli.me.uk/tesi.html">MA Thesis</a></p></li>
       </ul>
-    <!-- </div>  -->
-
+    </div>
   </div>
 </nav>
 
