--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -11,15 +11,14 @@
       <a class="navbar-brand" href="/">rizzoli.me.uk</a>
     </div>
 
-    <div class="collapse navbar-collapse" id="navbar-collapse-1">
+    <div class="collapse navbar-collapse container-fluid" id="navbar-collapse-1">
       <ul class="nav nav-tabs">
         <li><a href="http://mrizzoli.github.io">About</a></li>
-        <li><a href="https://github.com/mrizzoli/notes_src">Source on
-            Github</a>&nbsp;<i class="mega-octicon octicon-mark-github"></i>
-        <li><p>personal page</p></li>
         <li><p class="view"><a href="https://github.com/mrizzoli">GitHub Profile</a></p></li>
         <li><p class="view"><a href="http://notebook.rizzoli.me.uk">Notebook</a></p></li>
         <li><p class="view"><a href="http://notebook.rizzoli.me.uk/tesi.html">MA Thesis</a></p></li>
+        <li><a href="https://github.com/mrizzoli/notes_src">Source on
+            Github</a>&nbsp;<i class="mega-octicon octicon-mark-github"></i>
       </ul>
     </div>
   </div>
