--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -13,12 +13,22 @@
 
     <div class="collapse navbar-collapse container-fluid" id="navbar-collapse-1">
       <ul class="nav nav-tabs">
-        <li><a href="http://mrizzoli.github.io">About</a></li>
-        <li><p class="view"><a href="https://github.com/mrizzoli">GitHub Profile</a></p></li>
-        <li><p class="view"><a href="http://notebook.rizzoli.me.uk">Notebook</a></p></li>
-        <li><p class="view"><a href="http://notebook.rizzoli.me.uk/tesi.html">MA Thesis</a></p></li>
-        <li><a href="https://github.com/mrizzoli/notes_src">Source on
-            Github</a>&nbsp;<i class="mega-octicon octicon-mark-github"></i>
+        <div class="col-md-3">
+          <h2><a href="http://mrizzoli.github.io">About</a></h2>
+        </div>
+        <div class="col-md-3">
+          <h2><p class="view"><a href="https://github.com/mrizzoli">GitHub Profile</a></p></h2>
+        </div>
+        <div class="col-md-3">
+          <h2><p class="view"><a href="http://notebook.rizzoli.me.uk">Notebook</a></p></h2>
+        </div>
+        <div class="col-md-3">
+          <h2><p class="view"><a href="http://notebook.rizzoli.me.uk/tesi.html">MA Thesis</a></p></h2>
+        </div>  
+        <div class="col-md-3">
+          <h2><a href="https://github.com/mrizzoli/notes_src">Source
+          on Github</a>&nbsp;<i class="mega-octicon octicon-mark-github"></i>
+        </div> 
       </ul>
     </div>
   </div>
