--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -8,7 +8,7 @@
       <!--   <span class="icon-bar"></span> -->
       <!--   <span class="icon-bar"></span> -->
       <!-- </button> -->
-      <a class="navbar-brand" href="/">rizzoli.me.uk</a>
+      <h2><a class="navbar-brand" href="/">rizzoli.me.uk</a></h2>
     </div>
 
     <div class="collapse navbar-collapse container-fluid" id="navbar-collapse-1">
@@ -17,18 +17,18 @@
           <h3><a href="http://mrizzoli.github.io">About</a></h3>
         </div>
         <div class="col-md-2">
-          <h3><p class="view"><a href="https://github.com/mrizzoli">GitHub Profile</a></p></h3>
-        </div>
-        <div class="col-md-2">
           <h3><p class="view"><a href="http://notebook.rizzoli.me.uk">Notebook</a></p></h3>
         </div>
         <div class="col-md-2">
           <h3><p class="view"><a href="http://notebook.rizzoli.me.uk/tesi.html">MA Thesis</a></p></h3>
         </div>  
         <div class="col-md-2">
-          <h3><a href="https://github.com/mrizzoli/notes_src">Source
-          on Github</a>&nbsp;<i class="mega-octicon octicon-mark-github"></i>
+          <h3><a href="https://github.com/mrizzoli/notes_src">Source</a></h3></i>
         </div> 
+        <div class="col-md-2">
+          <h3><p class="view"><a href="https://github.com/mrizzoli">GitHub
+          Profile </a>&nbsp;<i class="mega-octicon octicon-mark-github"</p></h3>
+        </div>
       </ul>
     </div>
   </div>
