--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -27,7 +27,7 @@
         </div> 
         <div class="col-md-2">
           <h3><p class="view"><a href="https://github.com/mrizzoli">GitHub
-          Profile </a>&nbsp;<i class="mega-octicon octicon-mark-github"</p></h3>
+          Profile&nbsp;<i class="mega-octicon octicon-mark-github"></a></i></p></h3>
         </div>
       </ul>
     </div>
