--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -2,15 +2,10 @@
   <div class="container-fluid">
 
     <div class="navbar-header">
-      <!-- <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse-1"> -->
-      <!--   <span class="sr-only">Toggle navigation</span> -->
-      <!--   <span class="icon-bar"></span> -->
-      <!--   <span class="icon-bar"></span> -->
-      <!--   <span class="icon-bar"></span> -->
-      <!-- </button> -->
+      <div class="col-md-2">
       <h2><a class="navbar-brand" href="/">rizzoli.me.uk</a></h2>
+      </div>
     </div>
-
     <div class="collapse navbar-collapse container-fluid" id="navbar-collapse-1">
       <ul class="nav nav-tabs">
         <div class="col-md-2">
