--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -9,19 +9,19 @@
     <div class="collapse navbar-collapse container-fluid" id="navbar-collapse-1">
       <ul class="nav nav-tabs">
         <div class="col-md-2">
-          <h3><i class="mega-octicon octicon-info"></i><a href="http://mrizzoli.github.io">About</a></h3>
+          <h3><i class="mega-octicon octicon-info"></i>&nbsp;<a href="http://mrizzoli.github.io">About</a></h3>
         </div>
         <div class="col-md-2">
-          <h3><i class="mega-octicon octicon-file-text"></i><p class="view"><a href="http://notebook.rizzoli.me.uk">Notebook</a></p></h3>
+          <h3><p class="view"><i class="mega-octicon octicon-file-text"></i>&nbsp;<a href="http://notebook.rizzoli.me.uk">Notebook</a></p></h3>
         </div>
         <div class="col-md-2">
-          <h3><p class="view"><i class="mega-octicon octicon-repo"></i><a href="http://notebook.rizzoli.me.uk/tesi.html">MA Thesis</a></p></h3>
+          <h3><p class="view"><i class="mega-octicon octicon-repo"></i>&nbsp;<a href="http://notebook.rizzoli.me.uk/tesi.html">MA Thesis</a></p></h3>
         </div>  
         <div class="col-md-2">
-          <h3><i class="mega-octicon octicon-file-code"></i><a href="https://github.com/mrizzoli/notes_src">Source</a></h3></i>
+          <h3><i class="mega-octicon octicon-file-code"></i>&nbsp;<a href="https://github.com/mrizzoli/notes_src">Source</a></h3></i>
         </div> 
         <div class="col-md-2">
-          <h3><p class="view"><i class="mega-octicon octicon-mark-github"></i><a href="https://github.com/mrizzoli">GitHub
+          <h3><p class="view"><i class="mega-octicon octicon-mark-github"></i>&nbsp;<a href="https://github.com/mrizzoli">GitHub
           Profile&nbsp;</a></p></h3>
         </div>
       </ul>
