--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -2,15 +2,16 @@
   <div class="container-fluid">
 
     <div class="navbar-header">
+      <!-- <div class="col-md-2"> -->
+      <!-- <h2><a class="navbar-brand" href="/">rizzoli.me.uk</a></h2> -->
+      <!-- </div> -->
       <div class="col-md-2">
-      <h2><a class="navbar-brand" href="/">rizzoli.me.uk</a></h2>
+          <h3><i class="mega-octicon octicon-info"></i>&nbsp;<a href="http://mrizzoli.github.io">About</a></h3>
       </div>
+
     </div>
     <div class="collapse navbar-collapse container-fluid" id="navbar-collapse-1">
       <ul class="nav nav-tabs">
-        <div class="col-md-2">
-          <h3><i class="mega-octicon octicon-info"></i>&nbsp;<a href="http://mrizzoli.github.io">About</a></h3>
-        </div>
         <div class="col-md-2">
           <h3><p class="view"><i class="mega-octicon octicon-file-text"></i>&nbsp;<a href="http://notebook.rizzoli.me.uk">Notebook</a></p></h3>
         </div>
