--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -6,7 +6,7 @@
       <!-- <h2><a class="navbar-brand" href="/">rizzoli.me.uk</a></h2> -->
       <!-- </div> -->
       <div class="col-md-3">
-          <h3><i class="mega-octicon octicon-info"></i>&nbsp;<a href="http://mrizzoli.github.io">About</a></h3>
+        <h3><p class="view"><a href="https://github.com/mrizzoli"><i class="mega-octicon octicon-mark-github"></i></a></p></h3>
       </div>
 
     </div>
@@ -22,8 +22,7 @@
           <h3><i class="mega-octicon octicon-file-code"></i>&nbsp;<a href="https://github.com/mrizzoli/notes_src">Source</a></h3></i>
         </div> 
         <div class="col-md-2">
-          <h3><p class="view"><i class="mega-octicon octicon-mark-github"></i>&nbsp;<a href="https://github.com/mrizzoli">GitHub
-          Profile&nbsp;</a></p></h3>
+           <h3><i class="mega-octicon octicon-info"></i>&nbsp;<a href="http://mrizzoli.github.io">About</a></h3>
         </div>
       </ul>
     </div>
