--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -5,12 +5,12 @@
       <!-- <div class="col-md-2"> -->
       <!-- <h2><a class="navbar-brand" href="/">rizzoli.me.uk</a></h2> -->
       <!-- </div> -->
-      <div class="col-md-3">
+      <div class="col-md-1">
         <h3><p class="view"><a href="https://github.com/mrizzoli"><i class="mega-octicon octicon-mark-github"></i></a></p></h3>
       </div>
-
     </div>
-    <div class="collapse navbar-collapse container-fluid" id="navbar-collapse-1">
+
+    <div class="collapse navbar-collapse container-fluid col-md-offset-2" id="navbar-collapse-1">
       <ul class="nav nav-tabs">
         <div class="col-md-2">
           <h3><p class="view"><i class="mega-octicon octicon-file-text"></i>&nbsp;<a href="http://notebook.rizzoli.me.uk">Notebook</a></p></h3>
