--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -10,7 +10,7 @@
       
     </div>
     </div>
-    <div class="collapse navbar-collapse container-fluid col-md-offset-2" id="navbar-collapse-1">
+    <div class="collapse navbar-collapse container-fluid" id="navbar-collapse-1">
       <ul class="nav nav-tabs">
         <div class="col-md-2">
           <h3><p class="view"><i class="mega-octicon octicon-file-text"></i>&nbsp;<a href="http://notebook.rizzoli.me.uk">Notebook</a></p></h3>
