--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -19,7 +19,7 @@
           <h3><p class="view"><i class="mega-octicon octicon-repo"></i>&nbsp;<a href="http://notebook.rizzoli.me.uk/tesi.html">MA Thesis</a></p></h3>
         </div>  
         <div class="col-md-2">
-          <h3><i class="mega-octicon octicon-file-code"></i>&nbsp;<a href="https://github.com/mrizzoli/notes_src">Source</a></h3></i>
+          <h3><i class="mega-octicon octicon-file-code"></i>&nbsp;<a href="https://github.com/mrizzoli/mrizzoli.github.io">Source</a></h3></i>
         </div> 
         <div class="col-md-2">
            <h3><i class="mega-octicon octicon-info"></i>&nbsp;<a href="http://mrizzoli.github.io">About</a></h3>
