--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -6,7 +6,7 @@
       <!-- <h2><a class="navbar-brand" href="/">rizzoli.me.uk</a></h2> -->
       <!-- </div> -->
       
-        <h3><p class="view"><a href="www.rizzoli.me.uk"><i class="mega-octicon octicon-mark-github"></i></a></p></h3>
+        <h3><p class="view"><a href="http://www.rizzoli.me.uk"><i class="mega-octicon octicon-mark-github"></i></a></p></h3>
       
     </div>
     </div>
