--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,27 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
-  {% include head.html %}
-  <body prefix="dc: http://purl.org/dc/terms/ og: http://ogp.me/ns#">
-    {% include navbar.html %}
-    <div class="container-fluid">
-      <!--  <div class="col-md-offset-1"> -->
-      <div class="row col-md-offset-1">
-      <!-- <div class="col-md-3"> -->
-      <!--     <h1>notes & stuff</h1> -->
-      <!--     <p>personal page</p> -->
-      <!--     <p class="view"><a href="https://github.com/mrizzoli"> -->
-      <!--         GitHub Profile</a></p> -->
-      <!--     <p class="view"><a href="http://notebook.rizzoli.me.uk"> -->
-      <!--         Notebook</a></p> -->
-      <!--     <p class="view"><a href="http://notebook.rizzoli.me.uk/tesi.html"> -->
-      <!--         MA Thesis</a></p> -->
-      <!-- </div> -->
+<html>
 
-        {{ content }}
+    {% include head.html %}
 
+    <body>
+
+    <div class="page-content">
+      <div class="wrap">
+      {{ content }}
+      </div>
     </div>
-    </div>  
-    {% include footer.html%}
 
-  </body>
+    {% include footer.html %}
+
+    </body>
 </html>
