--- a/css/theme.scss
+++ b/css/theme.scss
@@ -17,12 +17,13 @@
 //********************************************************
 
 // Several accent colors, choose one or create your own!
-$accent-color: #3CA2A2;    // original =)
+//$accent-color: #3CA2A2;    // original =)
 //$accent-color: #C38FD6;  // velvet
 //$accent-color: #8FD6B3;  // greenish
 //$accent-color: #35B4DE;  // bluish
 //$accent-color: #D2E354;  // yellowish
 //$accent-color: #52B54B;  // green
+$accent-color: #8DB359;
 
 $font-color: #dddddd;
 $background-color: #292929;
@@ -152,7 +153,7 @@ $screen-lg-min: 1200px;
 				font-size: 24px;
 
 				a:hover {
-					color: $light-medium;
+					color: #8DB359;
 				}
 
 				small {
@@ -179,7 +180,7 @@ $screen-lg-min: 1200px;
 		}
 
 		a:hover {
-			color: $light-blue;
+			color: #8DB359;
 		}
 	}
 
@@ -190,7 +191,7 @@ $screen-lg-min: 1200px;
 
 	.links {
 		a, a:active {
-			color: #FFFFFF;
+			color: #8DB359;
 		}
 	}
 
@@ -202,11 +203,11 @@ $screen-lg-min: 1200px;
 		bottom: 0px;
 
 		a, a:active {
-			color: #FFFFFF;
+			color: #8DB359;
 		}
 
 		a:hover {
-			color: $light-blue;
+			color: #8DB359;
 		}
 
 		ul {
@@ -428,50 +429,6 @@ div.post-meta {
   color: $warning-color;
 }
 
-//********************************************************
-//                    Header
-//********************************************************
-nav a {
-  padding-top: 20px !important;
-  padding-bottom: 20px !important;
-  @include transition(color 0.31s);
-  font-size: 18px;
-  font-family: Ubuntu;
-  -webkit-transition: all 0.7s ease;
-  transition: all 0.7s ease;
-}
-nav.navbar {
-  -webkit-transition: all 0.7s ease;
-  transition: all 0.7s ease;
-}
-nav.navbar.shrink {
-  min-height: 15px;
-}
-.navbar-brand {
-  font-size: 30px;
-  color: $accent-color;
-
-}
-nav.shrink a {
-  padding-top: 10px !important;
-  padding-bottom: 10px !important;
-  font-size: 15px;
-}
-nav.shrink .navbar-brand {
-  font-size: 25px;
-  height: inherit;
-}
-.navbar .navbar-nav {
-  display: inline-block;
-  float: right;
-}
-nav .navbar-toggle {
-  margin: 13px 15px 13px 0;
-}
-nav.shrink .navbar-toggle {
-  padding: 4px 5px;
-  margin: 8px 15px 8px 0;
-}
 
 //********************************************************
 //                    Footer
