--- a/css/theme.scss
+++ b/css/theme.scss
@@ -276,7 +276,7 @@ blockquote {
 }
 
 a {
-  color: $accent-color;
+  color: #8DB359;
 }
 
 //********************************************************
