--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,13 @@
     <footer class="footer-distributed">
       <div class="container">
         <div class="footer">
-          <p>Marco Rizzoli &copy; 2017</p>
+          <p> <!-- <a rel="license" -->
+          <!-- href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative -->
+          <!-- Commons License" style="border-width:0" -->
+          <!-- src="https://i.creativecommons.org/l/by/4.0/88x31.png" -->
+          <!-- /></a> --><br />This work is licensed under a <a rel="license"
+          href="http://creativecommons.org/licenses/by/4.0/">Creative
+          Commons Attribution 4.0 International License</a>. by {{site.author}}</p>
           {% include social.html %}
         </div>
       </div>
