--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,20 +1,3 @@
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <title>{{ site.name }}{% if page.title %} | {{ page.title }} {% endif %}</title>
-  <meta name="theme-color" content="#222222" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="{{ site.baseurl}}/js/jquery.min.js"></script>
-  <script src="{{ site.baseurl}}/js/bootstrap.min.js"></script>
-  <script src="{{ site.baseurl}}/js/header.js"></script>
-  <script src="{{ site.baseurl}}/js/toc.js"></script>
-  <link href="{{ site.baseurl}}/css/bootstrap.min.css" rel="stylesheet">
-  <link href="{{ site.baseurl}}/css/theme.css" rel="stylesheet">
-  <link href="{{ site.baseurl}}/css/syntax.css" rel="stylesheet">
-  <link href="{{ site.baseurl}}/css/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-</head>
-
 <body>
 
  <script type="text/javascript">
@@ -34,3 +17,23 @@
   })();
 </script>
 
+  <nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="{{site.baseurl }}/">{{ site.title }}</a>
+      </div>
+      <div class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+          <li><a href="{{site.url }}{{site.baseurl}}/post_list.html">/home</a></li>
+          <li><a href="{{site.url }}{{site.baseurl}}/archive.html">/archive</a></li>
+          <li><a href="{{site.url }}{{site.baseurl}}/tags.html">/tags</a></li>
+          <li><a href="{{site.url}}">/about</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
