--- a/css/theme.scss
+++ b/css/theme.scss
@@ -88,7 +88,7 @@ html, body, button, input, select, textarea {
 }
 
 body {
-  padding-top: 100px;
+  //padding-top: 100px;
   height: 100%;
   color: $font-color;
   background: $background-color url(./pics/triangles.png);
@@ -97,6 +97,13 @@ body {
 
 section {
     height:100%;
+    padding-top:20px;
+}
+
+.bottom-buttons {
+    padding-top:45%;
+    //padding-bottom:50px;
+    text-align:center;
 }
 
 .well {
@@ -117,7 +124,6 @@ section {
 .author-text {
     text-align: center;
     margin-top: 30px;
-
     b {
 	font-size: 32px;
     }
